# AutoAssocLayout

./: CMakeLists.txt
dpcppLib/include/: DataReconstructor.h  ParameterGeneration.h  utils.h
src/: CMakeLists.txt  DataReconNewTest.sycl.cpp  DataReconstructor.cpp  DataReconstructorTest.cpp  devicePackingTest.sycl.cpp  test.cpp  waveEquationStandardSycl.cpp  waveEquationTest1.sycl.cpp
